# HW7

./: API_USAGE_GUIDE.md  README.md  api_predictions_notebook.ipynb  generate_pickle_file.py  model_input_features.json  model_logistic_regression.pkl  process_data_demo.ipynb  pyproject.toml  requirements.txt
